--- a/medical app/style.css
+++ b/medical app/style.css
@@ -4,15 +4,11 @@
     box-sizing: border-box;
 }
 
-.mySlides {
-    display: none;}
-img {
-    vertical-align: middle;
-}
 body {
     background: #fff;
 }
 
+/* header */
 header {
     position: fixed;
     top: 0;
@@ -121,7 +117,7 @@ a {
     transform: translateY(-50%);
     color: #61ffd2;
 }
-
+/* homepage */
   .home {
     display: flex;
     align-items: center;
@@ -145,48 +141,7 @@ a {
     display: block;
   }
 
-  .footer .box-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
-  
-  .footer .box-container .box {
-    flex: 1 1 2rem;
-    text-align: left;
-    margin-left: 10rem;
-  }
-  
-  .footer .box-container .box h3 {
-    color: #333;
-    font-size: 1.2rem;
-    padding: 1rem 0;
-    margin-top: 5rem;
-  }
-  
-  .footer .box-container .box a {
-    display: block;
-    color: #666;
-    font-size: 0.8rem;
-    padding: 0.5rem 0;
-  }
-  
-  .footer .box-container .box a:hover {
-    color: var(--pink);
-    text-decoration: underline;
-  }
-  
-  .footer .credit {
-    text-align: center;
-    padding: 1rem;
-    margin-top: 0.8rem;
-    padding-top: 1.5rem;
-    font-size: 1.2rem;
-    color: #333;
-    border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
-    padding-bottom: 3rem;
-  }
-
+/* Calories calculate */
 .content .row{
   display: flex;
 }
@@ -233,6 +188,7 @@ a {
   margin-bottom: 10%;
 }
 
+/* calories of food */
 .items {
   margin-left: auto;
   text-align: center;
@@ -287,6 +243,50 @@ a {
 
 .items .box-container .box .text h3:hover {
   text-decoration: underline;
+}
+
+
+/* footer */
+.footer .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.footer .box-container .box {
+  flex: 1 1 2rem;
+  text-align: left;
+  margin-left: 10rem;
+}
+
+.footer .box-container .box h3 {
+  color: #333;
+  font-size: 1.2rem;
+  padding: 1rem 0;
+  margin-top: 5rem;
+}
+
+.footer .box-container .box a {
+  display: block;
+  color: #666;
+  font-size: 0.8rem;
+  padding: 0.5rem 0;
+}
+
+.footer .box-container .box a:hover {
+  color: var(--pink);
+  text-decoration: underline;
+}
+
+.footer .credit {
+  text-align: center;
+  padding: 1rem;
+  margin-top: 0.8rem;
+  padding-top: 1.5rem;
+  font-size: 1.2rem;
+  color: #333;
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 3rem;
 }
 
   @keyframes fade {
