--- a/medical app/calculate.css
+++ b/medical app/calculate.css
@@ -12,7 +12,7 @@ img {
 body {
     background: #fff;
 }
-
+/* header */
 header {
     position: fixed;
     top: 0;
@@ -134,6 +134,7 @@ a {
     
   }
   
+/* add food name box */
 .box {
     margin-top: 10%;
 }
@@ -185,13 +186,14 @@ a {
     height: 30px;
 }
 
+/* total calculate box */
 .total .col-1 h1 {
     text-align: center;
     align-items: center;
     margin-top: 5%;
 }
   
-  
+/* footer */
   .footer .box-container {
     display: flex;
     flex-wrap: wrap;
